[package]
name = "sodium-biscuit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "^0.5"
sha2 = "^0.9"
hmac = "^0.10"
curve25519-dalek = "^3.0"
hex = "0.4"
zeroize = { version = "1", default-features = false }
thiserror = "1"
rand = { version = "0.7" }
libsodium-sys-stable = "*"

